--- a/TRAVEL_ON_NA_BACKEND/travel-on-na/build.gradle
+++ b/TRAVEL_ON_NA_BACKEND/travel-on-na/build.gradle
@@ -46,6 +46,9 @@ dependencies {
     
     // Database (MySQL)
     runtimeOnly 'com.mysql:mysql-connector-j'
+
+    // Thymeleaf
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 }
 
 tasks.named('test') {
