--- a/TRAVEL_ON_NA_BACKEND/travel-on-na/src/main/resources/application.yml
+++ b/TRAVEL_ON_NA_BACKEND/travel-on-na/src/main/resources/application.yml
@@ -6,18 +6,18 @@ spring:
   
   # Database 설정
   datasource:
-    url: jdbc:mysql://localhost:3306/travel_on_na?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    url: ${DB_URL}
     driver-class-name: com.mysql.cj.jdbc.Driver
-    username: root
+    username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
 
   # JPA 설정
   jpa:
     hibernate:
-      ddl-auto: update    # 테이블 자동 생성
+      ddl-auto: none    # 자동 테이블 생성 비활성화
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MySQLDialect
+        dialect: org.hibernate.dialect.MySQLDialect  # 공백 제거
         format_sql: true
         show_sql: true
     naming:
